# dylib

./: Art.c  Bus.c  Bus1.c  Bus1a.c  Bus2.c  CMakeLists.txt  README.md  a2b2c.c  ac2b2c.c  ac2bcw.c  acw2bcw.c  b.c  bc.c  bcw_w.c  bcw_wi.c  bcw_wiw.c  c.c  mac_app.c  res.cpp  runandsave  runandsave.cmd  str.cpp
Darwin_arm64/: a2b2c.txt  ac2b2c.txt  ac2bc.txt  ac2bcw_w.txt  ac2bcw_wi.txt  ac2bcw_wiw.txt  acw2bcw_w.txt  acw2bcw_wi.txt  acw2bcw_wiw.txt
Darwin_x86_64/: a2b2c.txt  ac2bc.txt  ac2bcw_wi.txt  ac2bcw_wiw.txt  acw2bcw_w.txt  acw2bcw_wi.txt
Linux_x86_64/: a2b2c.txt  ac2b2c.txt  ac2bc.txt  ac2bcw_w.txt  ac2bcw_wi.txt  acw2bcw_wiw.txt
Windows10_x64/: a2b2c.txt  ac2b2c.txt  ac2bc.txt  ac2bcw_w.txt  ac2bcw_wi.txt  ac2bcw_wiw.txt  acw2bcw_w.txt  acw2bcw_wi.txt  acw2bcw_wiw.txt
